// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainPage/> component matches snapshots when fetching robots fails 1`] = `
<div>
  <div
    class="ui container center aligned"
  >
    <div
      class="ui top fixed huge stackable menu"
    >
      <div
        class="item"
      >
        <h1>
          RoboFriends
        </h1>
      </div>
      <div
        class="right item"
      >
        <div
          class="ui icon input"
        >
          <input
            aria-label="Search Robots"
            data-testid="search-input"
            placeholder="Search robots..."
            type="text"
            value=""
          />
          <i
            class="search icon"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 120px;"
    >
      <h2>
        Error in fetching robots!
      </h2>
    </div>
  </div>
</div>
`;

exports[`<MainPage/> component matches snapshots when fetching robots is still pending 1`] = `
<div>
  <div
    class="ui container center aligned"
  >
    <div
      class="ui top fixed huge stackable menu"
    >
      <div
        class="item"
      >
        <h1>
          RoboFriends
        </h1>
      </div>
      <div
        class="right item"
      >
        <div
          class="ui icon input"
        >
          <input
            aria-label="Search Robots"
            data-testid="search-input"
            placeholder="Search robots..."
            type="text"
            value=""
          />
          <i
            class="search icon"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 120px;"
    >
      <div>
        <div
          class="ui active inverted dimmer"
        >
          <div
            class="ui text loader"
          >
            Loading
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MainPage/> component matches snapshots when fetching robots is successful 1`] = `
<div>
  <div
    class="ui container center aligned"
  >
    <div
      class="ui top fixed huge stackable menu"
    >
      <div
        class="item"
      >
        <h1>
          RoboFriends
        </h1>
      </div>
      <div
        class="right item"
      >
        <div
          class="ui icon input"
        >
          <input
            aria-label="Search Robots"
            data-testid="search-input"
            placeholder="Search robots..."
            type="text"
            value=""
          />
          <i
            class="search icon"
          />
        </div>
      </div>
    </div>
    <div
      style="margin-top: 120px;"
    >
      <div
        class="ui cards"
      />
    </div>
  </div>
</div>
`;
